--- a/DoDHackathon2013/res/values/strings.xml
+++ b/DoDHackathon2013/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <!-- Strings for the main day view fragment -->
+    <string name="placeholder_username">John Doe</string>
+    <string name="placeholder_loadtype">Rifleman</string>
+    
+    <!-- Strings for the nutrition types -->
+    <string name="calories">Calories</string>
+    <string name="carbs">Carbohydrates</string>
+    <string name="fat">Fat</string>
+    <string name="protein">Protein</string>
+    <string name="calories_unit">kCal</string>
+    <string name="grams_unit">g</string>
+    
 </resources>
