--- a/DoDHackathon2013/res/values/strings.xml
+++ b/DoDHackathon2013/res/values/strings.xml
@@ -4,5 +4,17 @@
     <string name="app_name">DoDHackathon2013</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+    
+   	<string name="gender">Gender</string>
+	<string name="male">Male</string>
+   	<string name="female">Female</string>
+	<string name="height">Height</string>
+   	<string name="ft">ft.</string>
+   	<string name="in">in.</string>
+   	<string name="weight">Weight</string>
+   	<string name="target_weight">Set a target weight</string>
+   	<string name="lbs">lbs.</string>
+   	<string name="age">Age</string>
+   	<string name="yrs">yrs.</string>
+  	
 </resources>
