--- a/DoDHackathon2013/res/values/strings.xml
+++ b/DoDHackathon2013/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <!-- Strings for dialog_profile.xml -->
    	<string name="gender">Gender</string>
 	<string name="male">Male</string>
    	<string name="female">Female</string>
@@ -14,6 +15,8 @@
    	<string name="weight">Weight</string>
    	<string name="target_weight">Set a target weight</string>
    	<string name="lbs">lbs.</string>
+   	<string name="my_weight">My Weight</string>
+   	<string name="my_target">Target Weight</string>
    	<string name="age">Age</string>
    	<string name="yrs">yrs.</string>
   	
