--- a/DoDHackathon2013/res/values/strings.xml
+++ b/DoDHackathon2013/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">DoDHackathon2013</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_profile">Profile</string>
     <string name="hello_world">Hello world!</string>
 
     <!-- Strings for dialog_profile.xml -->
