--- a/DoDHackathon2013/res/values/strings.xml
+++ b/DoDHackathon2013/res/values/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DoDHackathon2013</string>
+    <string name="app_name">MARTEE</string>
     <string name="action_profile">Profile</string>
-    <string name="hello_world">Hello world!</string>
 
     <!-- Strings for dialog_profile.xml -->
    	<string name="gender">Gender</string>
@@ -19,6 +18,7 @@
    	<string name="my_target">Target Weight</string>
    	<string name="age">Age</string>
    	<string name="yrs">yrs.</string>
+   	<string name="name">Name</string>
    	
    	<!-- Placeholder strings for list_element_food -->
   	<string name="placeholder_food_title">Food Name</string>
